--- a/IndividualAssign_FinalVersion/Vox_Final.ipynb
+++ b/IndividualAssign_FinalVersion/Vox_Final.ipynb
@@ -59,8 +59,8 @@
     "\n",
     "1. Know your audience - we removed the assumption that the audience will know everything about different types of deaths. The graph is improvized to add the total firearm deaths, for a better comparison.\n",
     "2. Use of colors: The colors are very different from each other, so that comparison becomes easier\n",
-    "3. I have added the legend within the plot\n",
-    "4. Using this graph, the author tries to divert the attention from mass shootings and murders to suicides, and states that this is one of the most compelling reasons to reduce access to guns. I have added a rebuttal to this claim by showing that suicides form the largest component of total violent deaths or injury related deaths in general. Firearm suicides also follow a similar trend."
+    "3. I have added the legend within the plot (concept: Eye beats memory)\n",
+    "4. Using this graph, the author tries to divert the attention from mass shootings and murders to suicides, and states that this is one of the most compelling reasons to reduce access to guns. I have added a rebuttal to this claim in the end by showing that suicides form the largest component of total violent deaths or injury related deaths in general. Firearm suicides also follow just the same trend."
    ]
   },
   {
@@ -206,7 +206,6 @@
     "**Analysis:**\n",
     "\n",
     "1. Suicides are higher than homicides in general\n",
-    "2. Suicide to Homicide Ratio is higher in case of general deaths as compared to that of firearm deaths\n",
     "3. This shows that tighter gun control need not necessarily reduce the % of suicides as compared homicides, but it will only have a general impact on the overall firearm deaths\n",
     "\n",
     "**Action:**\n",
@@ -652,8 +651,15 @@
     "\n",
     "Redesign Efforts:\n",
     "\n",
-    "1. Use of Saturation: Saturation is used majorly when we intend to communicate change. But in this case, that is not the case. I used contrasts instead, to show success vs failure so that the audience can understand it more clearly\n",
-    "2. The legend was missing and hence it made it difficult to understand the graph immediately, I have added that"
+    "1. The author has used saturation in the original graph: Saturation is used majorly when we intend to communicate change. But in this case, that is not the case. I used contrasts instead, to show success vs failure so that the audience can understand it more clearly\n",
+    "2. The legend was missing in the vox chart and hence it made it difficult to understand the graph immediately, I have added that"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Detailed Analysis:"
    ]
   },
   {
@@ -1004,16 +1010,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
-    "**Looking at this chart, one may not clearly conclude that the homicide rates have reduced over the years**\n",
-    "\n",
-    "**The same graph may be plotted as below to show a completely opposite picture**"
+    "**Looking at this chart, one may not clearly conclude that the homicide rates have reduced over the years**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Revised Version of the above charts:\n",
     "\n",
@@ -1024,7 +1034,9 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1048,7 +1060,9 @@
    "cell_type": "code",
    "execution_count": 57,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1069,7 +1083,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "#### Revisions Made:\n",
     "\n",
@@ -1081,10 +1098,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deceptive Version 1: 2nd chart\n",
+    "\n",
+    "**The same graph may be plotted as below to show a completely opposite picture** (years 2009 to 2016)\n",
+    "\n",
+    "It shows that the homicide rates have only increased"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1104,7 +1134,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Revised Version of the above chart:\n",
     "\n",
@@ -1116,7 +1149,9 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1138,7 +1173,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "The regression plot seen above plotted for the years from 2009 to 2016 (which was not included in the author's plots) shows that the homicide rates is on an upward trend. So it is exactly the opposite of what the author claims. \n",
     "\n",
@@ -1147,7 +1185,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Overall Revision of Chart 1\n",
     "\n",
@@ -1159,14 +1200,19 @@
     "\n",
     "And both these graphs show, that neither of these rates are decreasing constantly in the last one decade. So, the author's claim is not completely True\n",
     "\n",
-    "Also, since both these follow the same trend, it is highly unlikely that gun control trends have had any specific impact on these trends. The reasons behind the trend may be studied further"
+    "Pls note: from 1993 to 1999, overall crime rates also decreased to a large extent, and some researchers attribute this trend to higher police efforts to curb crime and also improvement in the economy in general.Reference:[Washington Post](https://www.washingtonpost.com/news/wonk/wp/2015/12/03/weve-had-a-massive-decline-in-gun-violence-in-the-united-states-heres-why/?noredirect=on&utm_term=.8b4b90e9f613)\n",
+    "\n",
+    "Hence, it is highly unlikely that gun control trends have had any specific impact on decrease in firearm homicide rates. So, it is really irrelevant to cite this decrease for anything related to gun control policies \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1177,7 +1223,9 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1203,7 +1251,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Chart II    <img src=\"Decep_Image3.jpg\" width=\"400\" height=\"400\" align=\"right\"/>\n",
     "\n",
@@ -1242,7 +1293,9 @@
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1266,7 +1319,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### First Version Plot"
    ]
@@ -1275,7 +1331,9 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1295,7 +1353,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Final Revised Version:\n",
     "\n",
@@ -1308,7 +1369,9 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1320,7 +1383,9 @@
    "cell_type": "code",
    "execution_count": 34,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1345,7 +1410,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "\n",
     "### Chart III   <img src=\"Decep_Image2.jpg\" width=\"400\" height=\"400\" align=\"right\"/>\n",
@@ -1398,7 +1466,9 @@
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1408,7 +1478,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**2008 to 2017 LEO firearm deaths**\n",
     "\n",
@@ -1419,7 +1492,9 @@
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1440,7 +1515,9 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1536,7 +1613,9 @@
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1557,7 +1636,9 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1620,7 +1701,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**2008 to 2016 firearm related homicide deaths**\n",
     "\n",
@@ -1631,7 +1715,9 @@
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1693,7 +1779,9 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1751,7 +1839,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### First Version Plot"
    ]
@@ -1760,7 +1851,9 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1781,14 +1874,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "**This graph clearly shows that the total fire arm homicide is a stronger and a more important evidence for gun violence issues.**"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Final Revised Version:\n",
     "\n",
@@ -1802,7 +1901,9 @@
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -1814,7 +1915,9 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -1839,18 +1942,26 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Overall Changes to the Deception Document"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "1. Merged all the code chunks together\n",
     "2. Removed the display of intermediary datasets\n",
-    "3. Explained the appraoch in further detail"
+    "3. Better explanations\n",
+    "4. Revised the graphs in line with the visualization concepts\n",
+    "5. Added additional references to support my claims"
    ]
   }
  ],
