with image link updations

--- a/TeamProject_Final Version/income_Inequality_final_1.6.ipynb
+++ b/TeamProject_Final Version/income_Inequality_final_1.6.ipynb
@@ -195,7 +195,7 @@
     "[Wikipedia- “Income inequality in the United States”](https://en.wikipedia.org/wiki/Income_inequality_in_the_United_States)\n",
     "\n",
     "\n",
-    "<img src=\"Claim1.jpg\" width=\"500\" height=\"400\" />\n",
+    "<img src=\"https://github.com/nivs2710/Nivi_Assignments_DataViz/raw/master/TeamProject_Final%20Version/Claim1.JPG\" width=\"500\" height=\"400\" />\n",
     "\n",
     "Joseph E. Stiglitz said:” The upper 1% of Americans are now taking in nearly a quarter of the nation’s income every year. \n",
     "The wealth rather than income, the top 1% control 40%. 25 years ago, the corresponding wealth figures were 12% and 33%.” in his book, “The Great Divide”. Since 1970s, the share of top 1percent increases while bottom 40 percent decreases. It means that the increasing income disparity may be caused by very few people taking much more shares of income.\n",
@@ -1067,7 +1067,7 @@
     "\n",
     "**A. Income disparity between genders:**\n",
     "\n",
-    "<img src=\"Action1.jpg\" width=\"500\" height=\"400\" />\n",
+    "<img src=\"https://github.com/nivs2710/Nivi_Assignments_DataViz/raw/master/TeamProject_Final%20Version/Action1.JPG\" width=\"500\" height=\"400\" />\n",
     "\n",
     "source: [Cause of Gender Wage Gap](https://www.vox.com/2018/2/19/17018380/gender-wage-gap-childcare-penalty)\n",
     "\n",
