Updated Image Links

--- a/IndividualAssign_FinalVersion/Vox_Final.ipynb
+++ b/IndividualAssign_FinalVersion/Vox_Final.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "### Final Redesign\n",
     "\n",
-    "<img src=\"graph10redesign.jpg\" width=\"550\" height=\"450\" />\n",
+    "<img src=\"https://github.com/nivs2710/Nivi_Assignments_DataViz/raw/master/IndividualAssign_FinalVersion/graph10redesign.JPG\" width=\"550\" height=\"450\" />\n",
     "\n",
     "\n",
     "**Redesign using visualization concepts:**\n",
@@ -72,7 +72,7 @@
    "source": [
     "### VOX Chart\n",
     "\n",
-    "<img src=\"graph10.jpg\" width=\"500\" height=\"400\" />\n",
+    "<img src=\"https://github.com/nivs2710/Nivi_Assignments_DataViz/raw/master/IndividualAssign_FinalVersion/graph10.JPG\" width=\"500\" height=\"400\" />\n",
     "\n",
     "Source:[Vox Article on Gun Violence in America](https://www.vox.com/policy-and-politics/2017/10/2/16399418/us-gun-violence-statistics-maps-charts)\n",
     "\n",
@@ -341,7 +341,7 @@
     "\n",
     "**Redesign First Version:** (Pls note: this was made using tableau, and hence have just added a picture here)\n",
     "\n",
-    "<img src=\"graph10redesignv1.0.jpg\" width=\"700\" height=\"450\">\n",
+    "<img src=\"https://github.com/nivs2710/Nivi_Assignments_DataViz/raw/master/IndividualAssign_FinalVersion/graph10redesignv1.0.JPG\" width=\"700\" height=\"450\">\n",
     "\n",
     "\n",
     "\n",
@@ -387,7 +387,7 @@
    "source": [
     "### Final Redesigned Chart\n",
     "\n",
-    "<img src=\"graph8redesign.jpg\" width=\"450\" height=\"400\"> \n",
+    "<img src=\"https://github.com/nivs2710/Nivi_Assignments_DataViz/raw/master/IndividualAssign_FinalVersion/graph8redesign.JPG\" width=\"450\" height=\"400\"> \n",
     "\n",
     "\n",
     "**Redesign:**\n",
@@ -434,7 +434,7 @@
    "source": [
     "**VOX Chart**\n",
     "\n",
-    "<img src=\"graph8.jpg\" width=\"475\" height=\"375\"/>\n",
+    "<img src=\"https://github.com/nivs2710/Nivi_Assignments_DataViz/raw/master/IndividualAssign_FinalVersion/graph8.JPG\" width=\"475\" height=\"375\"/>\n",
     "\n",
     "Source:[Vox Article on Gun Violence in America](https://www.vox.com/policy-and-politics/2017/10/2/16399418/us-gun-violence-statistics-maps-charts)\n",
     "\n",
@@ -566,7 +566,7 @@
     "\n",
     "**Redesign First Version:**\n",
     "\n",
-    "<img src=\"graph8redesignv1.0.jpg\" width=\"700\" height=\"450\">\n",
+    "<img src=\"https://github.com/nivs2710/Nivi_Assignments_DataViz/raw/master/IndividualAssign_FinalVersion/graph8redesignv1.0.JPG\" width=\"700\" height=\"450\">\n",
     "\n",
     "\n",
     "\n",
@@ -606,13 +606,13 @@
    "source": [
     "### VOX Chart\n",
     "\n",
-    "<img src=\"graph12.jpg\" width=\"475\" height=\"375\"/>\n",
+    "<img src=\"https://github.com/nivs2710/Nivi_Assignments_DataViz/raw/master/IndividualAssign_FinalVersion/graph12.JPG\" width=\"475\" height=\"375\"/>\n",
     "\n",
     "Source:[Vox Article on Gun Violence in America](https://www.vox.com/policy-and-politics/2017/10/2/16399418/us-gun-violence-statistics-maps-charts)\n",
     "\n",
     "### My Earlier Redesign\n",
     "\n",
-    "<img src=\"graph12redesignv1.0.jpg\" width=\"475\" height=\"375\"/>\n",
+    "<img src=\"https://github.com/nivs2710/Nivi_Assignments_DataViz/raw/master/IndividualAssign_FinalVersion/graph12redesignv1.0.JPG\" width=\"475\" height=\"375\"/>\n",
     "\n",
     "I based my first version of this redesign on the very first claim and the redesign of the first claim chart. The claim was that suicides dominate over all other kinds of violent deaths. Also, the break up of firearm related deaths showed that suicides like homicides were way more in case of men than in case of women.\n",
     "\n",
@@ -622,7 +622,7 @@
     "\n",
     "### Redesign of the same chart\n",
     "\n",
-    "<img src=\"graph12redesign.jpg\" width=\"500\" height=\"400\"/>\n",
+    "<img src=\"https://github.com/nivs2710/Nivi_Assignments_DataViz/raw/master/IndividualAssign_FinalVersion/graph12redesign.JPG\" width=\"500\" height=\"400\"/>\n",
     "\n",
     "1. Converted the last three methods into one category called others, since the % werent high and keeping them separate did not add any additional value\n",
     "2. Made it easier to understand by plotting the highest ordered one first\n",
@@ -647,7 +647,7 @@
     "The VOX article tries to illustrate that suicide attempts using firearms are way more successful as compared to any other means. So, this could possibly be the reason why firearm dominates in case of successful suicide methods. \n",
     "I used the same data to redesign the graph for conveying the message better.\n",
     "\n",
-    "<img src=\"graph12aredesign.jpg\" width=\"700\" height=\"475\"/>\n",
+    "<img src=\"https://github.com/nivs2710/Nivi_Assignments_DataViz/raw/master/IndividualAssign_FinalVersion/graph12aredesign.JPG\" width=\"700\" height=\"475\"/>\n",
     "\n",
     "Redesign Efforts:\n",
     "\n",
@@ -863,7 +863,7 @@
     "\n",
     "### VOX Chart\n",
     "\n",
-    "<img src=\"Decep_Image1.jpg\" width=\"400\" height=\"400\" align=\"right\"/>\n",
+    "<img src=\"https://github.com/nivs2710/Nivi_Assignments_DataViz/raw/master/IndividualAssign_FinalVersion/Decep_Image1.jpg\" width=\"400\" height=\"400\" align=\"right\"/>\n",
     "\n",
     "The author uses this graph probably to show that firearm homicide rates have come down, thus to give a counter argument that even though guns are a problem, the impact on homicide rates is much lesser than what it was 2 decades ago. \n",
     "\n",
@@ -1262,7 +1262,7 @@
     "editable": true
    },
    "source": [
-    "### Chart II    <img src=\"Decep_Image3.jpg\" width=\"400\" height=\"400\" align=\"right\"/>\n",
+    "### Chart II    <img src=\"https://github.com/nivs2710/Nivi_Assignments_DataViz/raw/master/IndividualAssign_FinalVersion/Decep_Image3.JPG\" width=\"400\" height=\"400\" align=\"right\"/>\n",
     "\n",
     "\n",
     "\n",
@@ -1422,7 +1422,7 @@
    },
    "source": [
     "\n",
-    "### Chart III   <img src=\"Decep_Image2.jpg\" width=\"400\" height=\"400\" align=\"right\"/>\n",
+    "### Chart III   <img src=\"https://github.com/nivs2710/Nivi_Assignments_DataViz/raw/master/IndividualAssign_FinalVersion/Decep_Image2.JPG\" width=\"400\" height=\"400\" align=\"right\"/>\n",
     "\n",
     "\n",
     "The author claims that in states with more guns, more police officers are also killed on duty and uses graph 14 to make this claim. [Cited Source](https://ajph.aphapublications.org/doi/full/10.2105/AJPH.2015.302749)\n",
