Updated all github links for data

--- a/IndividualAssign_FinalVersion/Vox_Final.ipynb
+++ b/IndividualAssign_FinalVersion/Vox_Final.ipynb
@@ -137,9 +137,9 @@
    },
    "outputs": [],
    "source": [
-    "FireArmTotal = pd.read_csv('FireArmTotalDeaths.csv')\n",
-    "FireArmHomicide=pd.read_csv('FireArmHomicide.csv')\n",
-    "FireArmSuicide=pd.read_csv('FireArmSuicides.csv')\n",
+    "FireArmTotal = pd.read_csv('Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/FireArmTotalDeaths.csv')\n",
+    "FireArmHomicide=pd.read_csv('Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/FireArmHomicide.csv')\n",
+    "FireArmSuicide=pd.read_csv('Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/FireArmSuicides.csv')\n",
     "\n",
     "# merging total firearm deaths data with that of firearm homicide\n",
     "FireArmTotalDeathsCombined = pd.merge(FireArmTotal,FireArmHomicide,on='RowId')\n",
@@ -223,10 +223,10 @@
    },
    "outputs": [],
    "source": [
-    "TotalFatalInjury = pd.read_csv('TotalFatalInjury.csv')\n",
-    "TotalHomicides=pd.read_csv('TotalHomicides.csv')\n",
-    "TotalSuicides=pd.read_csv('TotalSuicides.csv')\n",
-    "TotalViolenceDeaths=pd.read_csv('TotalViolenceDeaths.csv')"
+    "TotalFatalInjury = pd.read_csv('Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/TotalFatalInjury.csv')\n",
+    "TotalHomicides=pd.read_csv('Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/TotalHomicides.csv')\n",
+    "TotalSuicides=pd.read_csv('Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/TotalSuicides.csv')\n",
+    "TotalViolenceDeaths=pd.read_csv('Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/TotalViolenceDeaths.csv')"
    ]
   },
   {
@@ -456,22 +456,22 @@
    "outputs": [],
    "source": [
     "# Enlisting scores and ranking for each state on gun control\n",
-    "state_score_gun_law = pd.read_csv('State_Score_GunLaws.csv')\n",
+    "state_score_gun_law = pd.read_csv('Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/State_Score_GunLaws.csv')\n",
     "state_score_gun_law.rename(columns={'ST':'StateAbbr'}, inplace=True)\n",
     "\n",
     "# Importing a list of all US States\n",
-    "US_states = pd.read_csv('us_states.csv')\n",
+    "US_states = pd.read_csv('Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/us_states.csv')\n",
     "US_states.columns=['StateCap','State','StateAbbr']\n",
     "US_states.loc[49]=['DISTRICT OF COLUMBIA','District of Columbia','CO']\n",
     "US_states.State=US_states.State.apply(lambda x: x.lower())\n",
     "\n",
     "# Per Capita Gunownership data Statewise\n",
-    "guns_per_capita = pd.read_csv('GunOwnership.csv')\n",
+    "guns_per_capita = pd.read_csv('Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/GunOwnership.csv')\n",
     "guns_per_capita.rename(columns={'# of guns per capita':'GunsPerCapita','# of guns registered':'GunsRegistered'}, inplace=True)\n",
     "guns_per_capita['State']=guns_per_capita['State'].apply(lambda x: x.lower())\n",
     "\n",
     "# Importing total firearm related death data. Death Rate defined as per 100,000\n",
-    "firearm_death_rate=pd.read_csv('FireArmDeathRate.csv')\n",
+    "firearm_death_rate=pd.read_csv('Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/FireArmDeathRate.csv')\n",
     "firearm_death_rate.rename(columns={'Location':'State','Firearms Death Rate per 100,000':'FirearmDeathRatePer100000'},inplace=True)\n",
     "firearm_death_rate.State=firearm_death_rate.State.apply(lambda x: x.lower())"
    ]
@@ -675,7 +675,7 @@
    },
    "outputs": [],
    "source": [
-    "sui_data=pd.read_csv(\"SuicideModes.csv\")"
+    "sui_data=pd.read_csv(\"Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/SuicideModes.csv\")"
    ]
   },
   {
@@ -781,7 +781,7 @@
    },
    "outputs": [],
    "source": [
-    "sui_method=pd.read_csv(\"SuiMethodFatality.csv\")\n",
+    "sui_method=pd.read_csv(\"Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/SuiMethodFatality.csv\")\n",
     "sui_method['Total']=sui_method['Attempt_Success%']+sui_method['Attempt_Failed%']"
    ]
   },
@@ -934,10 +934,10 @@
    },
    "outputs": [],
    "source": [
-    "Homicides_1981_to_1998 = pd.read_csv('1981-98Homicides.csv')\n",
+    "Homicides_1981_to_1998 = pd.read_csv('Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/1981-98Homicides.csv')\n",
     "Homicides_1981_to_1998 = Homicides_1981_to_1998[['Year','Crude Rate']]\n",
     "Homicides_1981_to_1998.rename(columns={'Crude Rate':'Homicide_Rate'}, inplace=True)\n",
-    "Homicides_1999_to_2016 = pd.read_csv('1999-16Homicides.csv')\n",
+    "Homicides_1999_to_2016 = pd.read_csv('Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/1999-16Homicides.csv')\n",
     "Homicides_1999_to_2016.rename(columns={'Crude Rate':'Homicide_Rate'}, inplace=True)\n",
     "Homicides_1999_to_2016 = Homicides_1999_to_2016[['Year','Homicide_Rate']]\n",
     "Homicides_All = Homicides_1981_to_1998.append(Homicides_1999_to_2016)\n",
@@ -1222,7 +1222,7 @@
    },
    "outputs": [],
    "source": [
-    "rev_homicide=pd.read_csv(\"Overall_Homicide.csv\")"
+    "rev_homicide=pd.read_csv(\"Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/Overall_Homicide.csv\")"
    ]
   },
   {
@@ -1305,8 +1305,8 @@
    },
    "outputs": [],
    "source": [
-    "Aus_Suicide=pd.read_csv(\"Australia_Suicide.csv\")\n",
-    "Aus_Pop=pd.read_csv(\"Australia_Pop.csv\")\n",
+    "Aus_Suicide=pd.read_csv(\"Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/Australia_Suicide.csv\")\n",
+    "Aus_Pop=pd.read_csv(\"Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/Australia_Pop.csv\")\n",
     "Aus_Suicide['Other']=(Aus_Suicide['TotalSuicides'])-(Aus_Suicide['Firearms'])\n",
     "Aus_Suicide=Aus_Suicide[['Year','Firearms','Other']]\n",
     "Aus=Aus_Suicide.merge(Aus_Pop)\n",
@@ -1774,7 +1774,7 @@
     }
    ],
    "source": [
-    "total_firearm_homicides=pd.read_csv('2008-16Homicides.csv')\n",
+    "total_firearm_homicides=pd.read_csv('Nivi_Assignments_DataViz/IndividualAssign_FinalVersion/2008-16Homicides.csv')\n",
     "total_firearm_homicides=total_firearm_homicides.dropna() # drops the total column\n",
     "total_firearm_homicides=total_firearm_homicides[['Year','Deaths']]\n",
     "total_firearm_homicides['Category']='TotalFirearmHomicides'\n",
