data sources changed to github links

--- a/TeamProject_Final Version/income_Inequality_final_1.6.ipynb
+++ b/TeamProject_Final Version/income_Inequality_final_1.6.ipynb
@@ -104,7 +104,7 @@
    },
    "outputs": [],
    "source": [
-    "Gini=pd.ExcelFile('Gini.xlsx')\n",
+    "Gini=pd.ExcelFile('Nivi_Assignments_DataViz/TeamProject_Final Version/Gini.xlsx')\n",
     "Gini=pd.read_excel(Gini,'Data')\n",
     "\n",
     "#The header is the third row and data starts from fourth row. The unnmaed column:0 is just NANs. Hence, removing it.\n",
@@ -155,7 +155,7 @@
     }
    ],
    "source": [
-    "Gini.to_csv('Gini inequality.csv')\n",
+    "Gini.to_csv('Nivi_Assignments_DataViz/TeamProject_Final Version/Gini inequality.csv')\n",
     "sns.factorplot(x='Year',y='Gini_Index',data=Gini,aspect=3,markers='None')\n",
     "plt.ylabel(\"Gini Index\", fontsize = 12)\n",
     "plt.xlabel(\"Year\", fontsize = 12)\n",
@@ -242,7 +242,7 @@
    },
    "outputs": [],
    "source": [
-    "comp = pd.read_excel('QuantileData.xlsx')\n",
+    "comp = pd.read_excel('Nivi_Assignments_DataViz/TeamProject_Final Version/QuantileData.xlsx')\n",
     "comp['Bottom 40 percent'] = comp['Lowest Quintile'] + comp['Second Quintile']\n",
     "comp['year'] = comp['Year'].fillna(0.0).astype(int)\n",
     "quantile = comp[['year','Top 1 Percent','Bottom 40 percent']]\n",
@@ -345,7 +345,7 @@
    },
    "outputs": [],
    "source": [
-    "gender=pd.ExcelFile('Gender_Pay_Quarterly.xlsx')\n",
+    "gender=pd.ExcelFile('Nivi_Assignments_DataViz/TeamProject_Final Version/Gender_Pay_Quarterly.xlsx')\n",
     "gender=pd.read_excel(gender)\n",
     "\n",
     "#Dropping the NA's from the data frame.\n",
@@ -461,7 +461,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"Data USA - Bar Chart of Wage by Gender in Common Jobs in the United States.csv\")\n",
+    "df = pd.read_csv(\"Nivi_Assignments_DataViz/TeamProject_Final Version/Data USA - Bar Chart of Wage by Gender in Common Jobs in the United States.csv\")\n",
     "\n",
     "df = df[['year','soc_name','sex_name','avg_wage_ft']]\n",
     "df = df[df.year == 2016]\n",
@@ -581,7 +581,7 @@
    },
    "outputs": [],
    "source": [
-    "Unemp=pd.ExcelFile('Umemp.xlsx')\n",
+    "Unemp=pd.ExcelFile('Nivi_Assignments_DataViz/TeamProject_Final Version/Umemp.xlsx')\n",
     "Unemp_race=pd.read_excel(Unemp,'Sheet3')\n",
     "Unemp_race['Date']=pd.to_datetime(Unemp_race['Month'],errors='coerce')\n",
     "df=Unemp_race.copy()\n",
@@ -750,7 +750,7 @@
    },
    "outputs": [],
    "source": [
-    "G=pd.ExcelFile('Gini_By_Race.xls')\n",
+    "G=pd.ExcelFile('Nivi_Assignments_DataViz/TeamProject_Final Version/Gini_By_Race.xls')\n",
     "G1=pd.read_excel(G,'f04')\n",
     "G2=G1.iloc[2:,]\n",
     "G2.columns=G2.iloc[0]\n",
@@ -878,7 +878,7 @@
    "outputs": [],
    "source": [
     "# Read the files for each race and merged it together.\n",
-    "MedWag=pd.ExcelFile('MedianWagesDistribution.xlsx')\n",
+    "MedWag=pd.ExcelFile('Nivi_Assignments_DataViz/TeamProject_Final Version/MedianWagesDistribution.xlsx')\n",
     "BWandWM=pd.read_excel(MedWag,'BlackWomenWhiteMen')\n",
     "LW=pd.read_excel(MedWag,'LatinaWomen')\n",
     "NW=pd.read_excel(MedWag,'NativeWomen')\n",
@@ -1152,7 +1152,7 @@
    },
    "outputs": [],
    "source": [
-    "df_tax = pd.read_csv('State_Taxes_and_Fees_Collected__Beginning_Fiscal_Year_Ending_March_31__1995.csv')"
+    "df_tax = pd.read_csv('Nivi_Assignments_DataViz/TeamProject_Final Version/State_Taxes_and_Fees_Collected__Beginning_Fiscal_Year_Ending_March_31__1995.csv')"
    ]
   },
   {
@@ -1210,7 +1210,7 @@
    },
    "outputs": [],
    "source": [
-    "df_pop = pd.read_excel('US population by year.xlsx')\n",
+    "df_pop = pd.read_excel('Nivi_Assignments_DataViz/TeamProject_Final Version/US population by year.xlsx')\n",
     "df_pop['Date']=pd.to_datetime(df_pop['Date'])\n",
     "df_pop['year']=df_pop['Date'].dt.year\n",
     "df_pop['Value']=df_pop['Value'].str.replace(' million','')\n",
